<?xml version="1.0" encoding="utf-8"?>
<com.example.moviecatalogue.view.BasicSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catalogue_tab_refresh_srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/catalogue_tab_root_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalogue_tab_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.example.moviecatalogue.view.BasicSwipeRefreshLayout>