<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/catalogueFragment">

    <fragment
        android:id="@+id/catalogueFragment"
        android:name="com.example.moviecatalogue.ui.CatalogueFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_catalogue">
        <action
            android:id="@+id/action_catalogueFragment_to_catalogueDetailFragment"
            app:destination="@id/catalogueDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/catalogueDetailFragment"
        android:name="com.example.moviecatalogue.ui.CatalogueDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_catalogue_detail">
        <argument
            android:name="mediaId"
            app:argType="integer" />
    </fragment>
</navigation>